# pwx

./: Makefile  README.md  go.mod  pwx.go
internal/: constants.go
internal/crypto/: linux_tpm2.go  processor.go
internal/knowledge/: encoder.go  sampling.go
internal/possession/: config.go  errors.go
windows_hello/: .gitignore  CMakeLists.txt  main.cpp  windows_hello.cpp  windows_hello.h
winhello/: .gitignore  CMakeLists.txt  main.cpp  winhello.cpp  winhello.h
